--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,14 @@
 
   <button (click)="getRoute()">Get routes</button>
 
-
   <button (click)="search()">Search</button>
+  <button (click)="carriage()">Carriage</button>
+  <button (click)="orders()">Orders</button>
+  <button (click)="postOrders()">Make order</button>
+
+  <button (click)="signup()">Register User</button>
+
+  <button (click)="signin()">Login User</button>
 
   <button (click)="create()">Create Station</button>
   <button (click)="login()">Login</button>
